# hpmq-template

./: Cargo.toml  cargo-generate.toml  hpmq
.cargo/: config.toml
src/: lib.rs
