[package]
name = "{{crate_name}}"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib"]

[dependencies]
hpmq = { git = "https://github.com/wangjuyunlian/hpmq-sdk.git", package = "hpmq-sdk"}
